--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,34 @@ body {
 	margin-right: 5px;
 }
 
+/*.dropdown-menu .active > a,
+.dropdown-menu .active > a:hover {
+	background-color: #B94A48;
+	/*background-color: #0088cc;*/
+  	/*background-color: #0081c2;
+}*/
+
+.dropdown-menu .active > a,
+.dropdown-menu .active > a:hover {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #B94A48;
+  background-color: #B94A48;
+  background-image: linear-gradient(to bottom, #B94A48, #0077b3);
+  background-image: -moz-linear-gradient(top, #B94A48, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B94A48), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #B94A48, #0077b3);
+  background-image: -o-linear-gradient(top, #B94A48, #0077b3);
+  background-repeat: repeat-x;
+  outline: 0;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+
+a {
+	color: #B94A48;
+	text-decoration: none;
+}
+
 input.search-query {
 	margin-top: 5px;
 }
@@ -49,7 +77,7 @@ input.search-query {
 .container-fluid, .row-fluid {
 	padding-left: 0;
 	padding-right: 0;
-	/*position: fixed;*/
+	position: fixed;
 }
 
 .well {
@@ -117,7 +145,7 @@ ul.stars {
 
 #map label { 
   width: auto; 
-  display:inline; 
+  display: inline; 
 } 
 
 #friends {
