--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	color: #833332;
+	text-decoration: none;
+}
+
 input.search-query {
 	margin-top: 5px;
 }
