--- a/public/css/main.css
+++ b/public/css/main.css
@@ -127,6 +127,25 @@ ul.stars {
 	opacity: .25;
 }
 
+.icon-chevron-right:hover {
+	opacity: 1; 
+}
+
+li.toggled .icon-chevron-right {
+	opacity: 1;
+}
+
+li.toggled .icon-chevron-right {
+	transform:rotate(90deg);
+	-ms-transform:rotate(90deg); /* IE 9 */
+	-moz-transform:rotate(90deg); /* Firefox */
+	-webkit-transform:rotate(90deg); /* Safari and Chrome */
+}
+
+li.toggled {
+	background-color: #DC9492;
+}
+
 .row-fluid [class*="span"] {
 	margin-left: 0;
 	margin-right: 0;
@@ -166,7 +185,6 @@ ul.stars {
 #friends {
 	width: 100%;
 	height: 5%;
-	/*background: #A60000;*/
 }
 
 #friends img {
