--- a/public/js/templates/area.html
+++ b/public/js/templates/area.html
@@ -1,4 +1,6 @@
 <a>
-	<%= area %>
+	<%= name %>
+	<!-- <span class="label label-important">Number of Problems: <%= numberOfProblems %></span> -->
 	<i class="icon-chevron-right"></i>
+	<span class="label label-important"><%= grade.boulder.hueco %></span>
 </a>
