Typeahead now displays route and area names. Instantiates typeahead input field with ajax/mongo query data.

--- a/public/js/templates/subNav.html
+++ b/public/js/templates/subNav.html
@@ -23,7 +23,7 @@
 			<li id="searchBar">
 		    	<form class="form-search">
 			    	<div class="input-append">
-			    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead" placeholder="Search">
+			    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead" placeholder="Search" autocomplete="off">
 			    		<button id="searchBtn" type="submit" class="btn">
 			    			<i class="icon-search"></i>
 			    		</button>	    
