About to convert to CoffeeScript

--- a/public/js/templates/mainNav.html
+++ b/public/js/templates/mainNav.html
@@ -4,8 +4,8 @@
   		<a id="logo" href="#"><img src="img/logoSmall.png"/></a>
   	</div>
 	<div class="btn-group pull-right">
-		<a class="btn btn-inverse" role="button" data-toggle="modal" href="#myModal">Sign Up</a>
-		<a id="login" class="btn btn-inverse" href="#login">Log In</a>
+		<a class="btn btn-inverse" role="button" data-toggle="modal" href="#registerModal">Sign Up</a>
+		<a id="login" class="btn btn-inverse" role="button" data-toggle="modal" href="#loginModal">Log In</a>
 	</div>
   </div>
 </div>
