--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,7 +72,7 @@ a {
 }
 
 a:hover {
-	color: #833332;
+	color: #B94A48;
 	text-decoration: none;
 }
 
@@ -143,7 +143,7 @@ li.toggled .icon-chevron-right {
 }
 
 li.toggled {
-	background-color: #DC9492;
+	background-color: #eeeeee;
 }
 
 .row-fluid [class*="span"] {
