--- a/public/src/js/templates/signup.html
+++ b/public/src/js/templates/signup.html
@@ -26,7 +26,7 @@
 		  <div class="control-group">
 	     	<div class="form-actions">
 				  <button type="submit" class="btn btn-primary">Sign up</button>
-				  <button id="type="button" class="btn btn-primary">Connect using <strong>Facebook</strong></button>
+				  <button id="signupFacebook" type="button" class="btn btn-primary">Connect using <strong>Facebook</strong></button>
 				  <!-- <a href="#fbconnect"><img src="img/Large_fb_connect.png"/></a> -->
 			</div>
 		  </div>
