--- a/public/src/js/templates/mainNav.html
+++ b/public/src/js/templates/mainNav.html
@@ -1,11 +1,27 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div id="mainNav" class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
   	<div class="container pull-left">
   		<a id="logo" href="#"><img src="img/logoSmall.png"/></a>
   	</div>
+  	<% if (authenticated === true) { %>
+	<ul class="nav pull-right">
+		<li>
+			<img src=<%= picture %>/>
+		</li>
+		<li class="dropdown">
+			<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><%= names.first %><b class="caret"></b></a>
+			<ul class="dropdown-menu">
+				<li><a href="#">My Profile</a></li>
+				<li class="divider"></li>
+				<li><a href="#">Settings</a></li>
+			</ul>
+		</li>
+	</ul>
+  	<% } else { %>
 	<div class="btn-group pull-right">
 		<a class="btn btn-inverse" role="button" data-toggle="modal" href="#signupModal">Sign Up</a>
 		<a id="login" class="btn btn-inverse" role="button" data-toggle="modal" href="#loginModal">Log In</a>
 	</div>
+	<% } %>
   </div>
 </div>
